create login page and update site structure & styling

--- a/index.html
+++ b/index.html
@@ -3,20 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SCSS - Demo Website</title>
+  <title>SCSS - Demo Website | Home</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>SCSS <span class="line">|</span> <span>SASS</span></h1>
+  <header>
+    <h1>S<span>CSS</span> <span class="logo-slash">/</span> <span class="logo-text-gray">Demo</span></h1>
+  </header>
+
   <nav>
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="/">Home</a></li>
+      <li><a href="https://blog.brandonwinger-air.com" target="_blank">About</a></li>
+      <li><a href="https://brandonwinger-air.com" target="_blank">Contact</a></li>
+      <li><a href="login.html">Login</a></li>
     </ul>
   </nav>
+
+  <hr width="200">
+  <section id="page-title">
+    <h2>Home</h2>
+  </section>
+
   <article>
+    <h3>A style sheet language:</h3>
     <p>
       Sass (short for syntactically awesome style sheets) is a preprocessor scripting language that is interpreted or compiled into Cascading Style Sheets (CSS). SassScript is the scripting language itself.
     </p>
