update pages, titles, content and styling

--- a/features.html
+++ b/features.html
@@ -3,41 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SCSS - Demo Website | Login</title>
+  <title>SCSS - Demo Website | Home</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <h1>S<span>CSS</span> <span class="logo-slash">/</span> <span class="logo-text-gray">Demo</span></h1>
   </header>
+
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="features.html">Features</a></li>
       <li><a href="differences.html">Differences</a></li>
-      <li><a href="#!">Login</a></li>
+      <li><a href="login.html">Login</a></li>
     </ul>
   </nav>
 
   <hr width="280">
   <section id="page-title">
-    <h2>Login Form</h2>
+    <h2>Features</h2>
   </section>
 
-  <section>
-    <form>
-      <div>
-        <label for="username">Username:</label>
-        <input type="text" name="username" placeholder="Username" required/>
-      </div>
-      <div>
-        <label for="password">Password:</label>
-        <input type="password" name="password" placeholder="Password" required/>
-      </div>
-      <div>
-        <input type="submit" value="Login" required>
-      </div>
-    </form>
-  </section>
+  <article>
+    <h3>CSS Variables</h3>
+    <p>
+      Think of variables as a way to store information that you want to reuse throughout your stylesheet. You can store things like colors, font stacks, or any CSS value you think you’ll want to reuse.
+    </p>
+    <p>- Source: <a href="https://sass-lang.com/guide/#variables" target="_blank">Official Documentation</a></p>
+  </article>
 </body>
 </html>
