--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="https://blog.brandonwinger-air.com" target="_blank">About</a></li>
-      <li><a href="https://brandonwinger-air.com" target="_blank">Contact</a></li>
+      <li><a href="features.html">Features</a></li>
+      <li><a href="differences.html">Differences</a></li>
       <li><a href="login.html">Login</a></li>
     </ul>
   </nav>
 
-  <hr width="200">
+  <hr width="280">
   <section id="page-title">
     <h2>Home</h2>
   </section>
 
   <article>
-    <h3>A style sheet language:</h3>
+    <h3>CSS with superpowers ✨</h3>
     <p>
       Sass (short for syntactically awesome style sheets) is a preprocessor scripting language that is interpreted or compiled into Cascading Style Sheets (CSS). SassScript is the scripting language itself.
     </p>
@@ -43,7 +43,9 @@
       SassScript provides the following mechanisms: variables, nesting, mixins, and selector inheritance.
     </p>
   
-    <p>- Source: <a href="https://en.wikipedia.org/wiki/Sass_(style_sheet_language)">Wikipedia</a></p>
+    <p>- Source: <a href="https://en.wikipedia.org/wiki/Sass_(style_sheet_language)" target="_blank">
+      Wikipedia</a>
+    </p>
   </article>
 </body>
 </html>
