update structure, title & text content, nav link and responsive styles

--- a/differences.html
+++ b/differences.html
@@ -12,17 +12,18 @@
   </header>
 
   <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="features.html">Features</a></li>
-      <li><a href="#!">Differences</a></li>
-      <li><a href="login.html">Login</a></li>
-    </ul>
+    <div>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="features.html">Features</a></li>
+        <li><a href="#!">Differences</a></li>
+        <li><a href="login.html">Login</a></li>
+      </ul>
+    </div>
   </nav>
 
-  <hr width="280">
   <section id="page-title">
-    <h2>Syntax Differences</h2>
+    <h2>Differences</h2>
   </section>
 
   <article>
