--- a/features.html
+++ b/features.html
@@ -12,25 +12,32 @@
   </header>
 
   <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="features.html">Features</a></li>
-      <li><a href="differences.html">Differences</a></li>
-      <li><a href="login.html">Login</a></li>
-    </ul>
+    <div>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="features.html">Features</a></li>
+        <li><a href="differences.html">Differences</a></li>
+        <li><a href="login.html">Login</a></li>
+      </ul>
+    </div>
   </nav>
 
-  <hr width="280">
   <section id="page-title">
     <h2>Features</h2>
   </section>
 
   <article>
-    <h3>CSS Variables</h3>
+    <h3>CSS Variables 🎨</h3>
     <p>
       Think of variables as a way to store information that you want to reuse throughout your stylesheet. You can store things like colors, font stacks, or any CSS value you think you’ll want to reuse.
     </p>
-    <p>- Source: <a href="https://sass-lang.com/guide/#variables" target="_blank">Official Documentation</a></p>
+    <p>- Source: <a href="https://sass-lang.com/guide/#variables" target="_blank">Official Guide</a></p>
+
+    <h3>Nesting 🗂️</h3>
+    <p>
+      Rather than repeating the same selectors over and over again, you can write one style rule(s) inside another. Sass will automatically combine the outer rule’s selector with the inner rule’s.
+    </p>
+    <p>- Source: <a href="https://sass-lang.com/documentation/style-rules/" target="_blank">Official Documentation</a></p>
   </article>
 </body>
 </html>
