--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
   </header>
 
   <nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="features.html">Features</a></li>
-      <li><a href="differences.html">Differences</a></li>
-      <li><a href="login.html">Login</a></li>
-    </ul>
+    <div>
+      <ul>
+        <li><a href="#!">Home</a></li>
+        <li><a href="features.html">Features</a></li>
+        <li><a href="differences.html">Differences</a></li>
+        <li><a href="login.html">Login</a></li>
+      </ul>
+    </div>
   </nav>
 
-  <hr width="280">
   <section id="page-title">
     <h2>Home</h2>
   </section>
@@ -32,15 +33,6 @@
     </p>
     <p>
       Sass consists of two syntaxes. The original syntax, called "the indented syntax," uses a syntax similar to Haml. It uses indentation to separate code blocks and newline characters to separate rules. The newer syntax, SCSS (Sassy CSS), uses block formatting like that of CSS. It uses braces to denote code blocks and semicolons to separate rules within a block. The indented syntax and SCSS files are traditionally given the extensions .sass and .scss, respectively.
-    </p>
-    <p>
-      CSS3 consists of a series of selectors and pseudo-selectors that group rules that apply to them. Sass (in the larger context of both syntaxes) extends CSS by providing several mechanisms available in more traditional programming languages, particularly object-oriented languages, but that are not available to CSS3 itself. When SassScript is interpreted, it creates blocks of CSS rules for various selectors as defined by the Sass file. The Sass interpreter translates SassScript into CSS. Alternatively, Sass can monitor the .sass or .scss file and translate it to an output .css file whenever the .sass or .scss file is saved.
-    </p>
-    <p>
-      The indented syntax is a metalanguage. SCSS is a nested metalanguage and a superset of CSS, as valid CSS is valid SCSS with the same semantics.
-    </p>
-    <p>
-      SassScript provides the following mechanisms: variables, nesting, mixins, and selector inheritance.
     </p>
   
     <p>- Source: <a href="https://en.wikipedia.org/wiki/Sass_(style_sheet_language)" target="_blank">
