--- a/login.html
+++ b/login.html
@@ -11,15 +11,16 @@
     <h1>S<span>CSS</span> <span class="logo-slash">/</span> <span class="logo-text-gray">Demo</span></h1>
   </header>
   <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="features.html">Features</a></li>
-      <li><a href="differences.html">Differences</a></li>
-      <li><a href="#!">Login</a></li>
-    </ul>
+    <div>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="features.html">Features</a></li>
+        <li><a href="differences.html">Differences</a></li>
+        <li><a href="#!">Login</a></li>
+      </ul>
+    </div>
   </nav>
 
-  <hr width="280">
   <section id="page-title">
     <h2>Login Form</h2>
   </section>
