add styles & variable modules and update content in pages

--- a/features.html
+++ b/features.html
@@ -33,11 +33,21 @@
     </p>
     <p>- Source: <a href="https://sass-lang.com/guide/#variables" target="_blank">Official Guide</a></p>
 
+    <hr>
+
     <h3>Nesting 🗂️</h3>
     <p>
       Rather than repeating the same selectors over and over again, you can write one style rule(s) inside another. Sass will automatically combine the outer rule’s selector with the inner rule’s.
     </p>
     <p>- Source: <a href="https://sass-lang.com/documentation/style-rules/" target="_blank">Official Documentation</a></p>
+
+    <hr>
+
+    <h3>Modules 🔩</h3>
+    <p>
+      You don’t have to write all your Sass in a single file. You can split it up however you want with the @use rule. This rule loads another Sass file as a module, which means you can refer to its variables, mixins, and functions in your Sass file with a namespace based on the filename. Using a file will also include the CSS it generates in your compiled output!
+    </p>
+    <p>- Source: <a href="https://sass-lang.com/guide/#modules" target="_blank">Official Guide</a></p>
   </article>
 </body>
 </html>
