add to content in features page

--- a/features.html
+++ b/features.html
@@ -35,7 +35,7 @@
 
     <hr>
 
-    <h3>Nesting 🗂️</h3>
+    <h3>Nesting 🪹</h3>
     <p>
       Rather than repeating the same selectors over and over again, you can write one style rule(s) inside another. Sass will automatically combine the outer rule’s selector with the inner rule’s.
     </p>
@@ -48,6 +48,14 @@
       You don’t have to write all your Sass in a single file. You can split it up however you want with the @use rule. This rule loads another Sass file as a module, which means you can refer to its variables, mixins, and functions in your Sass file with a namespace based on the filename. Using a file will also include the CSS it generates in your compiled output!
     </p>
     <p>- Source: <a href="https://sass-lang.com/guide/#modules" target="_blank">Official Guide</a></p>
+
+    <hr>
+
+    <h3>Mixins 🗂️</h3>
+    <p>
+      Mixins allow you to define styles that can be re-used throughout your stylesheet. They make it easy to avoid using non-semantic classes like .float-left, and to distribute collections of styles in libraries.
+    </p>
+    <p>- Source: <a href="https://sass-lang.com/documentation/at-rules/mixin/" target="_blank">Official Documentation</a></p>
   </article>
 </body>
 </html>
