add extend rule styles and update features page content

--- a/features.html
+++ b/features.html
@@ -56,6 +56,19 @@
       Mixins allow you to define styles that can be re-used throughout your stylesheet. They make it easy to avoid using non-semantic classes like .float-left, and to distribute collections of styles in libraries.
     </p>
     <p>- Source: <a href="https://sass-lang.com/documentation/at-rules/mixin/" target="_blank">Official Documentation</a></p>
+
+    <hr>
+  
+    <h3>Extends 🔗</h3>
+    <p>
+      There are often cases when designing a page when one class should have all the styles of another class, as well as its own specific styles. For example, the BEM methodology encourages modifier classes that go on the same elements as block or element classes. But this can create cluttered HTML, it’s prone to errors from forgetting to include both classes, and it can bring non-semantic style concerns into your markup.
+    </p>
+    <p>
+      Sass’s @extend rule solves this. It’s written @extend &lt;selector&gt;, and it tells Sass that one selector should inherit the styles of another.
+    </p>
+    <p>- Source: <a href="https://sass-lang.com/documentation/at-rules/extend/" target="_blank">Official Documentation</a></p>
+  </article>
+
   </article>
 </body>
 </html>
