--- a/index.html
+++ b/index.html
@@ -11,33 +11,128 @@
     <h1>S<span>CSS</span> <span class="logo-slash">/</span> <span class="logo-text-gray">Demo</span></h1>
   </header>
 
-  <nav>
-    <div>
-      <ul>
-        <li><a href="#!">Home</a></li>
-        <li><a href="features.html">Features</a></li>
-        <li><a href="differences.html">Differences</a></li>
-        <li><a href="login.html">Login</a></li>
-      </ul>
-    </div>
-  </nav>
+  <div class="sidebar-container">
+    <div class="sidebar">
+      <div class="sidebar_header">
+        <div class="sidebar_header_logo">
+          <img src="/images/logo.svg" alt="">
+        </div>
+        <div class="sidebar_header_title">
+          <h5>SCSS / Demo</h5>
+        </div>
+      </div>
 
-  <section id="page-title">
-    <h2>Home</h2>
-  </section>
-
-  <article>
-    <h3>CSS with superpowers ✨</h3>
-    <p>
-      Sass (short for syntactically awesome style sheets) is a preprocessor scripting language that is interpreted or compiled into Cascading Style Sheets (CSS). SassScript is the scripting language itself.
-    </p>
-    <p>
-      Sass consists of two syntaxes. The original syntax, called "the indented syntax," uses a syntax similar to Haml. It uses indentation to separate code blocks and newline characters to separate rules. The newer syntax, SCSS (Sassy CSS), uses block formatting like that of CSS. It uses braces to denote code blocks and semicolons to separate rules within a block. The indented syntax and SCSS files are traditionally given the extensions .sass and .scss, respectively.
-    </p>
+      <div class="sidebar_list">
+        <div class="sidebar_list_item">
+          <a href="#!">
+            <div class="sidebar_list_item_img">
+              <img src="/images/house.svg" alt="">
+            </div>
+            <div class="sidebar_list_item_title">
+              Home
+            </div>
+          </a>
+        </div>
+        <div class="sidebar_list_item">
+          <a href="features.html">
+            <div class="sidebar_list_item_img">
+              <img src="/images/list.svg" alt="">
+            </div>
+            <div class="sidebar_list_item_title">
+              Features
+            </div>
+          </a>
+        </div>
+        <div class="sidebar_list_item">
+          <a href="differences.html">
+            <div class="sidebar_list_item_img">
+              <img src="/images/differences.svg" alt="">
+            </div>
+            <div class="sidebar_list_item_title">
+              Differences
+            </div>
+          </a>
+        </div>
+        <div class="sidebar_list_item">
+          <a href="login.html">
+            <div class="sidebar_list_item_img">
+              <svg fill="#ffffff" version="1.1" id="Layer_1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
+      xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"  width="20" height="20"
+      viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve">
+                <metadata>
+                  <sfw  xmlns="&ns_sfw;">
+                    <slices>
   
-    <p>- Source: <a href="https://en.wikipedia.org/wiki/Sass_(style_sheet_language)" target="_blank">
-      Wikipedia</a>
-    </p>
-  </article>
+                </slices>
+                    <sliceSourceBounds  width="505" height="984" bottomLeftOrigin="true" x="0" y="-552">
+  
+                </sliceSourceBounds>
+                  </sfw>
+                </metadata>
+                <g>
+                  <g>
+                    <g>
+                      <path d="M22,6H2C0.9,6,0,5.1,0,4V2c0-1.1,0.9-2,2-2h20c1.1,0,2,0.9,2,2v2C24,5.1,23.1,6,22,6z M22,4v1V4L22,4L22,4z M2,2v2h20
+                        l0-2H2z"/>
+                    </g>
+                  </g>
+                  <g>
+                    <g>
+                      <path d="M22,15H2c-1.1,0-2-0.9-2-2v-2c0-1.1,0.9-2,2-2h20c1.1,0,2,0.9,2,2v2C24,14.1,23.1,15,22,15z M22,13v1V13L22,13L22,13z
+                        M2,11v2h20l0-2H2z"/>
+                    </g>
+                  </g>
+                  <g>
+                    <g>
+                      <path d="M11,23H2c-0.5,0-1-0.5-1-1v-2c0-0.5,0.5-1,1-1h9c0.6,0,1,0.5,1,1v2C12,22.5,11.6,23,11,23z"/>
+                    </g>
+                    <g>
+                      <path d="M11,24H2c-1.1,0-2-0.9-2-2v-2c0-1.1,0.9-2,2-2h9c1.1,0,2,0.9,2,2v2C13,23.1,12.1,24,11,24z M11,22v1V22L11,22L11,22z
+                        M2,20v2h9l0-2H2z"/>
+                    </g>
+                  </g>
+                </g>
+              </svg>
+            </div>
+            <div class="sidebar_list_item_title">
+              Login
+            </div>
+          </a>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="page-content">
+    <nav>
+      <div>
+        <ul>
+          <li><a href="#!">Home</a></li>
+          <li><a href="features.html">Features</a></li>
+          <li><a href="differences.html">Differences</a></li>
+          <li><a href="login.html">Login</a></li>
+        </ul>
+      </div>
+    </nav>
+  
+    <section id="page-title">
+      <h2>Home</h2>
+    </section>
+  
+    <article>
+      <h3>CSS with superpowers ✨</h3>
+      <p>
+        Sass (short for syntactically awesome style sheets) is a preprocessor scripting language that is interpreted or compiled into Cascading Style Sheets (CSS). SassScript is the scripting language itself.
+      </p>
+      <p>
+        Sass consists of two syntaxes. The original syntax, called "the indented syntax," uses a syntax similar to Haml. It uses indentation to separate code blocks and newline characters to separate rules. The newer syntax, SCSS (Sassy CSS), uses block formatting like that of CSS. It uses braces to denote code blocks and semicolons to separate rules within a block. The indented syntax and SCSS files are traditionally given the extensions .sass and .scss, respectively.
+      </p>
+    
+      <p>- Source: <a href="https://en.wikipedia.org/wiki/Sass_(style_sheet_language)" target="_blank">
+        Wikipedia</a>
+      </p>
+    </article>
+  </div>
 </body>
 </html>
