responsive sidebar styles and media queries into mixins

--- a/features.html
+++ b/features.html
@@ -110,7 +110,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="features.html">Features</a></li>
-          <li><a href="differences.html">Differences</a></li>
+          <li><a href="differences.html">Diff<span class="shorten-text">erence</span>s</a></li>
           <li><a href="login.html">Login</a></li>
         </ul>
       </div>
